--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@ $(document).ready(function(){
 
 <div id="container">
     <div class="sky_ad" align="right"></div>
-        <div class="dynamic-form">
-            <a href="#" id="add">Adauga optiune</a> | <a href="#" id="remove">Sterge optiune</a> | <a href="#" id="reset">Resetare</a>
-            <form>
-                <div class="inputs">
-                    <div><input type="text" name="dynamic[]" class="field" placeholder="Titlul chestionarul"value=""/></div>
-                    <div><input type="text" name="dynamic[]" class="field" placeholder="Optiunea1"value=""/></div>
-                </div>
-                <input name="submit" type="button" class="submit" value="Trimite chestionar"/>
-            </form>
-        </div>
+    <div class="dynamic-form">
+        <a href="#" id="add">Add</a> | <a href="#" id="remove">Remove</a> | <a href="#" id="reset">Reset</a>
+        <form>
+           <div class="inputs">
+               <div><input type="text" name="dynamic[]" class="field" placeholder="Titlul chestionarul"value=""/></div>
+               <div><input type="text" name="dynamic[]" class="field" placeholder="Optiunea1"value=""/></div>
+           </div>
+              <input name="submit" type="button" class="submit" value="Send"/>
+        </form>
     </div>
 </div>
  
